# FYP

./: FYP.sln  README.md
Debug/: FYP.ilk
FYP/: Animation.cpp  Animation.h  CMakeLists.txt  Coin.cpp  Coin.h  Collider.cpp  Enemy.cpp  Enemy.h  FYP.vcxproj  FYP.vcxproj.filters  Game.cpp  Game.h  Gamestates.h  Goal.cpp  Goal.h  Main.cpp  MainMenuScene.cpp  MainMenuScene.h  MovingPlatform.cpp  MovingPlatform.h  Pipe.cpp  Pipe.h  Play.cpp  Play.h  Player.cpp  Player.h  QuestionBlock.cpp  QuestionBlock.h  Tile.cpp  Tile.h
FYP/Debug/: player.new.obj.enc  vc142.idb
FYP/Debug/FYP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FYP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FYP/Documents/: FYP Research Report.docx  FYP TDD.docx  Poster.pptx  Project GDD.docx
FYP/Documents/Weekly Logs/: Week1.docx  Week10.docx  Week11.docx  Week12.docx  Week13.docx  Week14.docx  Week15.docx  Week16.docx  Week17.docx  Week18.docx  Week19.docx  Week2.docx  Week20.docx  Week21.docx  Week22.docx  Week23.docx  Week24.docx  Week25.docx  Week3.docx  Week4.docx  Week5.docx  Week6.docx  Week7.docx  Week8.docx  Week9.docx
FYP/Resources/Maps/: BonusArea1.txt  BonusArea2.txt  BonusArea4.txt  BonusAreaA.json  BonusAreaA.tmx  Level1-1.json  Level1-2.json  Level1-2.txt  Level1-3.json  Level1-3.txt  Level1-4.json  Level1-4.txt  Level2-1.txt  Level2-3.txt  Level2-4.json
FYP/cmake/: SFMLConfig.cmake
